<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/amarelo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dani.gas.MainActivity"
    tools:showIn="@layout/activity_bemvindo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo"
        android:id="@+id/textView2"
        android:textColor="@color/cinza_escuro"
        android:textSize="@dimen/font_20"
        android:layout_marginBottom="64dp"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frase_inicial"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textSize="@dimen/font_20"
        android:textColor="@color/cinza_escuro"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnlogar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/entrar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cadastrar"
        android:id="@+id/btncadastrar"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/btnlogar"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
