...
    <string name="error_empty_numero">Informe o número</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="frase_inicial">Seus pedidos chegam rápidinho!</string>
    <string name="bem_vindo">Bem vindo ao GasApp!</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar-se</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="conhecimentodia">Produtos</string>
    <string name="novidades">Pedidos</string>
    <string name="frases">Minhas frases</string>
    <string name="seguidores">Seguidores</string>
    <string name="fbcamera">Câmera</string>
    <string name="fbtexto">Texto</string>
    <string name="fbnovafrase">Nova frase</string>
...
