<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_marginTop="20dp" android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.dani.loginpictaccium.MainActivity"
        tools:showIn="@layout/activity_novo_endereco">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_background_selector"
            android:id="@+id/la1">

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/la1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginBottom="8dp"
                android:text="Preencha as informações" />

            <EditText
                android:id="@+id/etEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/card_background_selector"
                android:hint="Estado"
                android:padding="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <EditText
                android:id="@+id/etCep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/card_background_selector"
                android:hint="CEP"
                android:padding="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <EditText
                android:id="@+id/etCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/card_background_selector"
                android:hint="Cidade"
                android:padding="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <EditText
                android:id="@+id/etBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/card_background_selector"
                android:hint="Bairro"
                android:padding="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <EditText
                android:id="@+id/etRua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/card_background_selector"
                android:hint="Rua"
                android:padding="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <EditText
                android:id="@+id/etNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/card_background_selector"
                android:hint="Número"
                android:padding="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <EditText
                android:id="@+id/etComplemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEstado"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/card_background_selector"
                android:hint="Complemento"
                android:padding="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>