<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dani.app12.MainActivity">
    <item
        android:id="@+id/action_salvar"
        android:title="Salvar"
        app:showAsAction="ifRoom"/>
</menu>
